- Fixes some unit test about vertx-core.